# land-graph

./: .env  README.md  pyproject.toml
data/: sample_propub_results.json
notebooks/: 00-bill-import.ipynb  01-EDA.ipynb  02-graph-analytics.ipynb  README.md  import.ipynb  sample.json
